# capital-eye-market-agent

./: .build.sh  .env.example  .gitignore  Dockerfile  HF_ENVIRONMENT_VARIABLES.md  Makefile  README.md  RENDER_DEPLOY.md  pyproject.toml  render.yaml  render_start.sh  requirements-hf.txt  requirements.txt
.github/workflows/: sync-to-huggingface.yml
backend/: __init__.py  config.py  llm_provider.py
backend/agents/: __init__.py  fundamental_agent.py  intent_analyzer.py  master_agent.py  sentiment_agent.py  technical_agent.py
backend/api/: __init__.py  fastapi_server.py
backend/models/: __init__.py  schemas.py  state.py
backend/tools/: __init__.py  advanced_tools.py  bse_corporate_actions_tool.py  bse_dividend_api_tool.py  dividend_tracker_tool.py  duckduckgo_tool.py  finnhub_tool.py  indian_stock_news_tool.py  moneycontrol_dividend_tool.py  moneycontrol_tool.py  nse_dividend_tool.py  nse_market_tool.py  sqlite_mcp_tool.py  twelve_data_tool.py  yahoo_finance_tool.py
backend/workflows/: __init__.py  market_graph.py
db/: market_analysis.db
docs/: architecture.md  case_study.md  google_sheet_integration.md  rules.md  sqlite_queries.md  todo.md
frontend/: __init__.py  streamlit_app.py
frontend/react-directory/: .env.example  index.html  package.json  (+3 more)
scripts/: setup_local_urls.py  start-local.sh
tests/: test_duckduckgo.py  test_fastapi.py  test_fundamental_agent.py  test_intent_analyzer.py  test_market_graph.py  test_master_agent.py  test_schemas.py  test_sentiment_agent.py  test_sqlite_mcp.py  test_state.py  test_technical_agent.py  test_yahoo_finance.py
(+39 files in other folders)
