[project]
name = "market-analyst-ai"
version = "0.1.0"
description = "AI Market Analyst – Multi-agent system for stock analysis"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 100
target-version = "py311"
